# Dallinger

./: .bumpversion.cfg  .codeclimate.yml  .codecov.yml  .coveragerc  .coveralls.yml  .dockerignore  .env  .eslintrc  .flake8  .gitattributes  .github_changelog_generator  .gitignore  .hound.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  Aptfile  CHANGELOG.md  CI_STATUS_PROBE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dangerfile  Database-model-attributes.md  Dockerfile  Gemfile  Getting started.md  LICENSE  MANIFEST.in  Procfile  README.md  THANKS.md  Vagrantfile  appveyor.yml  bootstrap.sh  build-requirements-list.txt  build-requirements.txt  constraints-deps.txt  (+29 more)
demos/: LICENSE  MANIFEST.in  README.md  Vagrantfile  __init__.py  constraints.txt  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
demos/2048/: config.txt  experiment.py  requirements.txt
demos/2048/static/scripts/: keyboard_input_manager.js
demos/2048/templates/: ad.html  consent.html  exp.html  questionnaire.html
demos/2048/templates/instructions/: instruct-ready.html
demos/bartlett1932/: __init__.py  bartlett1932_source.py  config.txt  experiment.py  requirements.txt  setup.py
demos/bartlett1932/static/scripts/: experiment.js
demos/bartlett1932/templates/: ad.html  consent.html  exp.html  instructions.html  questionnaire.html
demos/characters/: README.md  config.txt  draw_new_instance.html  experiment.py  requirements.txt
demos/characters/matlab+python/: base64toPNG.py  convert_to_logical.m  extract_num_from_string.m  process_drawings.m
demos/characters/static/css/: canvas.css
demos/characters/static/lib/: canvaslib.js  canvasobj.js  exclude.js  extend_jquery.js  image_preloader.js  taskutil.js
demos/characters/static/scripts/: experiment.js
demos/characters/static/stimuli/: tennis.md
demos/characters/templates/: ad.html  consent.html  exp.html
demos/characters/templates/instructions/: instruct-ready.html
demos/chatroom/: config.txt  experiment.py  requirements.txt
demos/chatroom/static/scripts/: experiment.js  reconnecting-websocket.js
demos/chatroom/templates/: ad.html  consent.html  exp.html  instructions.html  questionnaire.html  waiting.html
demos/chatroom/templates/instructions/: instruct-ready.html
demos/concentration/: README.md  config.txt  experiment.py  requirements.txt
demos/concentration/static/css/: memory.css
demos/concentration/static/scripts/: experiment.js  memory.js
demos/concentration/templates/: ad.html  consent.html  exp.html  instructions.html  questionnaire.html
demos/dlgr/demos/bartlett1932/: config.txt  constraints.txt  demo.ipynb  experiment.py  models.py  pyproject.toml  requirements.txt
demos/dlgr/demos/chatroom/: README.md  bots.py  config.txt  constraints.txt  experiment.py  pyproject.toml  requirements.txt
demos/dlgr/demos/chatroom_ws/: README.md  bots.py  config.txt  constraints.txt  experiment.py  pyproject.toml  requirements.txt
demos/dlgr/demos/concentration/: README.md  config.txt  constraints.txt  experiment.py  pyproject.toml  requirements.txt
demos/dlgr/demos/function_learning/: README.md  config.txt  constraints.txt  experiment.py  models.py  pyproject.toml
demos/dlgr/demos/iterated_drawing/: config.txt  constraints.txt  experiment.py  models.py  pyproject.toml  requirements.txt
demos/dlgr/demos/mcmcp/: config.txt  constraints.txt  experiment.py  models.py  pyproject.toml  requirements.txt
demos/dlgr/demos/rogers/: README.md  config.txt  constraints.txt  experiment.py  models.py  pyproject.toml  requirements.txt
demos/dlgr/demos/sheep_market/: config.txt  constraints.txt  experiment.py  pyproject.toml  requirements.txt
demos/dlgr/demos/snake/: config.txt  constraints.txt  experiment.py  pyproject.toml
demos/dlgr/demos/twentyfortyeight/: config.txt  constraints.txt  experiment.py  pyproject.toml  requirements.txt
demos/dlgr/demos/vox_populi/: README.md  (+5 more)
demos/function-learning/: config.txt  experiment.py  models.py  requirements.txt
demos/function-learning/templates/: ad.html  consent.html  default.html  exp.html  questionnaire.html
demos/image-labeling/: README.md  config.txt  experiment.py
demos/image-labeling/templates/: ad.html  consent.html  exp.html  instructions.html  layout.html  questionnaire.html
demos/iterated-drawing/: config.txt  experiment.py  models.py  requirements.txt  sources.py
demos/iterated-drawing/templates/: ad.html  consent.html  exp.html  questionnaire.html
demos/mafia/: config.txt  dump.rdb  experiment copy.py  experiment.py  models copy.py  models.py  nodes.py  requirements.txt
demos/mafia/templates/: consent.html  error2.html  exp.html  instructions.html  questionnaire.html
demos/mcmcp/: README.md  config.txt  experiment.py  models.py  requirements.txt
demos/mcmcp/templates/: ad.html  consent.html  exp.html  questionnaire.html
demos/memoryexpt/: config.txt  dump.rdb  experiment.py  requirements.txt
demos/memoryexpt/templates/: ad.html  consent.html  exp.html  instructions.html  questionnaire.html  waiting.html
demos/music-memory/: README.md
demos/music-memory/templates/: exp.html
demos/prisoners-dilemma/: config.txt  experiment.py
demos/prisoners-dilemma/templates/: consent.html  exp.html  instructions.html  questionnaire.html  waiting.html
demos/rogers/: config.txt  experiment.py  requirements.txt  sources.py
demos/rogers/templates/: ad.html  consent.html  questionnaire.html  stage.html
demos/rogers/tests/: tests.py
demos/sheep-market/: config.txt  experiment.py  requirements.txt
demos/sheep-market/templates/: ad.html  consent.html  exp.html  gallery.html  questionnaire.html
demos/snake/: README.md  config.txt  experiment.py  requirements.txt
demos/snake/templates/: ad.html  consent.html  exp.html  instructions.html  questionnaire.html
demos/tests/: conftest.py  test_bartlett.py  test_rogers.py
demos/vox-populi/: config.txt  experiment.py  requirements.txt
demos/vox-populi/templates/: ad.html  consent.html  exp.html  questionnaire.html
(+738 files in other folders)
