[bumpversion]
current_version = 2.3.0
commit = False
tag = False
tag_name = v{new_version}
message = Release version v{new_version}

[metadata]
description-file = README.md

[bumpversion:file:dallinger/version.py]

[bumpversion:file:setup.py]

[bumpversion:file:demos/bartlett1932/requirements.txt]

[bumpversion:file:demos/chatroom/requirements.txt]

[bumpversion:file:demos/function-learning/requirements.txt]

[bumpversion:file:demos/mcmcp/requirements.txt]

[bumpversion:file:demos/rogers/requirements.txt]

[bumpversion:file:demos/iterated-drawing/requirements.txt]

[bumpversion:file:demos/sheep-market/requirements.txt]

[bumpversion:file:demos/vox-populi/requirements.txt]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:.github_changelog_generator]

