[bumpversion]
current_version = 3.3.0
commit = False
tag = False
tag_name = v{new_version}
message = Release version v{new_version}

[metadata]
description-file = README.md

[bumpversion:file:dallinger/version.py]

[bumpversion:file:setup.py]

[bumpversion:file:demos/setup.py]

[bumpversion:file:demos/requirements.txt]

[bumpversion:file:demos/dlgr/demos/bartlett1932/requirements.txt]

[bumpversion:file:demos/dlgr/demos/chatroom/requirements.txt]

[bumpversion:file:demos/dlgr/demos/function_learning/requirements.txt]

[bumpversion:file:demos/dlgr/demos/mcmcp/requirements.txt]

[bumpversion:file:demos/dlgr/demos/rogers/requirements.txt]

[bumpversion:file:demos/dlgr/demos/iterated_drawing/requirements.txt]

[bumpversion:file:demos/dlgr/demos/sheep_market/requirements.txt]

[bumpversion:file:demos/dlgr/demos/vox_populi/requirements.txt]

[bumpversion:file:demos/dlgr/demos/twentyfortyeight/requirements.txt]

[bumpversion:file:demos/dlgr/demos/concentration/requirements.txt]

[bumpversion:file:demos/dlgr/demos/snake/requirements.txt]

[bumpversion:file:docs/source/conf.py]

[flake8]
max-line-length = 100
exclude =
	bin,
	build,
	.cache,
	dist,
	docs/source/conf.py,
	*.egg-info,
	.eggs,
	.git,
	lib,
	*.pyc,
	__pycache__,
	src,
	.tox,
