[bumpversion]
current_version = 7.0.0
commit = False
tag = False
tag_name = v{new_version}
message = Release version v{new_version}

[metadata]
description_file = README.md

[bumpversion:file:dallinger/version.py]

[bumpversion:file:setup.py]

[bumpversion:file:demos/setup.py]

[bumpversion:file:demos/requirements.txt]

[flake8]
max-line-length = 100
exclude =
	bin,
	build,
	.cache,
	dist,
	docs/source/conf.py,
	*.egg-info,
	.eggs,
	.git,
	lib,
	*.pyc,
	__pycache__,
	src,
	.tox,
