[project]
name = "dallinger-chatroom-demo"
version = "0.1.0"
description = "Chatroom experiment demo for Dallinger"
authors = [
    {name = "Dallinger Team", email = "dallinger@example.com"}
]
dependencies = [
    "dallinger",
    "nltk",
    "selenium",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
