[project]
name = "dallinger-mcmcp-demo"
version = "0.1.0"
description = "mcmcp experiment demo for Dallinger"
authors = [
    {name = "Dallinger Team", email = "dallinger@example.com"}
]
dependencies = [
    "dallinger",
    "selenium",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
